fixed store picture
photo of location was not fitting proper in mobile layouts, rearranged code to fix that

--- a/css/style.css
+++ b/css/style.css
@@ -200,8 +200,9 @@ li {
 #storePic {
   display: flex;
   margin: 0 auto;
-  max-width: 450px;
-  max-height: 450px;
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
 }
 
 
